--- a/index.html
+++ b/index.html
@@ -2,8 +2,40 @@
 <html>
 <head>
 	<title>Sliders</title>
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
+<div class="container">
+<div class="sec1">
+	<h1 class="test"><a href="#">Section 1</a></h1>
+	<div id="up" class="close"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+	</div>
+</div>
+
+<div class="sec2">
+	<h1 class="more"><a href="#">Section 2</a></h1>
+	<div id='set' class="close"><p>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	</div>
+</div>
+
+<div id="won" class="reset">
+<a class="illini" href="#"><img src="images/chief.jpeg"></a>
+</div>
+
+
+
+<script src="js/jquery.js"></script>
+<script src="js/main.js"></script>
 
 </body>
 </html>
