changed section heading name

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <div class="container">
 <div class="sec1">
-	<h1 class="test"><a href="#">Section 1</a></h1>
+	<h1 class="test"><a href="#">Fighting</a></h1>
 	<div id="up" class="close"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
@@ -15,7 +15,7 @@
 </div>
 
 <div class="sec2">
-	<h1 class="more"><a href="#">Section 2</a></h1>
+	<h1 class="more"><a href="#">ILLINI</a></h1>
 	<div id='set' class="close"><p>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
