--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </div>
 
 <div id="won" class="reset">
-<a class="illini" href="#"><img src="images/chief.jpg"></a>
+<a class="illini" href="#"><img src="images/Chief.jpg"></a>
 </div>
 
 
